--- a/WebApplication1/ClientApp/src/index.css
+++ b/WebApplication1/ClientApp/src/index.css
@@ -1,3 +1,12 @@
 ﻿body {
-    color: blue;
+    color: #2d2d2d;
+}
+
+
+p, a, body {
+    font-family: 'Montserrat', sans-serif;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    font-family: 'Staatliches', cursive;
 }
