added add payment type component

--- a/bangazonUserFront/ClientApp/src/components/PaymentType/PaymentType.css
+++ b/bangazonUserFront/ClientApp/src/components/PaymentType/PaymentType.css
@@ -1,3 +1,11 @@
 ﻿.SinglePay{
     background-color: purple;
 }
+
+.AllPay{
+    background-color: tomato;
+}
+
+.AddPay{
+    background-color: blue;
+}
